# gstat

./: .gitignore  ToDo.md  configure.in  makefile  makefile.in
cmd/: zincmap.eas
meschach/: chfactor.c  copy.c  dmacheps.c  fmacheps.c  hsehldr.c  init.c  ivecop.c  lufactor.c  macheps  machine.h  makefile.in  matop.c  matrix.h  matrixio.c  maxint.c  meminfo.h  memory.c  memstat.c  pxop.c  qrfactor.c  solve.c  sparse.c  sparse.h  sparseio.c  submat.c  vecop.c
src/: config.h  data.h  gstat.c  makefile  makefile.in  vario.h  vario_io.c  vario_io.h  version.h
